Attempt to fix #1223 - footer buttons being cut off when responsive text is off and font size is > 12

--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
@@ -177,6 +177,8 @@ button.ui-button-icon-only {
 
 #x_footerBlock .x_floatLeft button, #x_footerBlock .x_floatRight button {
 	height:		40px;
+	min-height: 1.3em;
+	width: 1.3em;
 	cursor:		pointer;
 	padding: 	0 41px 0 0;
 	/* override JQuery UI css from buttons on footer */
@@ -198,6 +200,7 @@ button.ui-button-icon-only {
 
 .ui-icon.x_help, .ui-icon.x_info, .ui-icon.x_colourChanger, .ui-icon.x_glossary, .ui-icon.x_maximise, .ui-icon.x_minimise, .ui-icon.x_media, .ui-icon.x_home, .ui-icon.x_saveSession, .ui-icon.x_projectIntro {
 	width:	41px;
+	min-width: 1.3em;
 }
 
 .ui-icon.x_next, .ui-icon.x_prev, .ui-icon.x_prev_hist {
@@ -649,13 +652,11 @@ button.ui-button-icon-only .ui-icon[class*=" fa-"] {
 /*styling for optional show/hider footer tools*/
 #x_footerChevron{
     cursor: pointer;
-}
-
-#x_footerChevron{
     color: white;
 	background: none;
 	border: none;
 	height:45px;
+	min-height: 1.3em;
 	font-size: 14px !important;
 	width:25px !important;
 }
